--- a/public/content/report1.html
+++ b/public/content/report1.html
@@ -2,7 +2,7 @@
     <h1>LAKANA REPORT 1</h1>
     <h1>Enrollment report</h1>
 
-    <h2>Enrollment summary - updated again</h2>
+    <h2>Enrollment report</h2>
     <p>The graph below shows enrollment from January to June.</p>
     <img src="/content/example.png" alt="" width="95%">
 
