--- a/public/content/lakana-sop-data-01-en.html
+++ b/public/content/lakana-sop-data-01-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA DATA-01</h1><h1>DATA MANAGEMENT</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA DATA-01</h1><h1>Data management</h1><p>Under development</p></article>
