--- a/public/content/lakana-sop-lab-01-en.html
+++ b/public/content/lakana-sop-lab-01-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA LAB-01</h1><h1>RECEPTION AND PROCESSING OF LAB SAMPLES IN KITA LAB </h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA LAB-01</h1><h1>Reception and processing of lab samples in Kita lab </h1><p>Under development</p></article>
