--- a/public/content/lakana-sop-lab-03-en.html
+++ b/public/content/lakana-sop-lab-03-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA LAB-03</h1><h1>E. COLI CULTURE</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA LAB-03</h1><h1>E. coli culture</h1><p>Under development</p></article>
