--- a/public/content/lakana-sop-prep-01-en.html
+++ b/public/content/lakana-sop-prep-01-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA PREP-01</h1><h1>ALLOCATION OF TREATMENT CODES TO PARTICIPATING VILLAGES</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA PREP-01</h1><h1>Allocation of treatment codes to participating villages</h1><p>Under development</p></article>
