--- a/public/content/lakana-sop-prep-02-en.html
+++ b/public/content/lakana-sop-prep-02-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA PREP-02</h1><h1>PROVIDING VILLAGE LEVEL INFORMATION</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA PREP-02</h1><h1>Providing village level information</h1><p>Under development</p></article>
