--- a/public/content/lakana-sop-prep-03-en.html
+++ b/public/content/lakana-sop-prep-03-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA PREP-03</h1><h1>SCHEDULING VILLAGE VISITS</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA PREP-03</h1><h1>Scheduling village visits</h1><p>Under development</p></article>
