--- a/public/content/lakana-sop-prep-04-en.html
+++ b/public/content/lakana-sop-prep-04-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA PREP-04</h1><h1>PREPARING FOR STUDY VISITS </h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA PREP-04</h1><h1>Preparing for study visits </h1><p>Under development</p></article>
