--- a/public/content/lakana-sop-proc-02-en.html
+++ b/public/content/lakana-sop-proc-02-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA PROC-02</h1><h1>PERFORMING ANTHROPOMETRIC MEASUREMENTS</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA PROC-02</h1><h1>Performing anthropometric measurements</h1><p>Under development</p></article>
