--- a/public/content/lakana-sop-proc-04-en.html
+++ b/public/content/lakana-sop-proc-04-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA PROC-04</h1><h1>COLLECTION OF RECTAL AND NASOPHARYNGEAL SWAB SAMPLES </h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA PROC-04</h1><h1>Collection of rectal and nasopharyngeal swab samples </h1><p>Under development</p></article>
