--- a/public/content/lakana-sop-proc-05-en.html
+++ b/public/content/lakana-sop-proc-05-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA PROC-05</h1><h1>WHOLE STOOL COLLECTION</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA PROC-05</h1><h1>Whole stool collection</h1><p>Under development</p></article>
