--- a/public/content/lakana-sop-proc-07-en.html
+++ b/public/content/lakana-sop-proc-07-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA PROC-07</h1><h1>DRY BLOOD SPOT ON FILTER PAPER</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA PROC-07</h1><h1>Dry blood spot on filter paper</h1><p>Under development</p></article>
