--- a/public/content/lakana-sop-visit-03-en.html
+++ b/public/content/lakana-sop-visit-03-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA VISIT-03</h1><h1>CONDUCTING THE LAST VISIT - MAIN STUDY </h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA VISIT-03</h1><h1>Conducting the last visit - main study </h1><p>Under development</p></article>
