--- a/public/content/lakana-sop-visit-11-en.html
+++ b/public/content/lakana-sop-visit-11-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA VISIT-11</h1><h1>CONDUCTING SUBSTUDY VISIT 5B</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA VISIT-11</h1><h1>Conducting substudy visit 5b</h1><p>Under development</p></article>
