--- a/public/content/lakana-sop-visit-15-en.html
+++ b/public/content/lakana-sop-visit-15-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA VISIT-15</h1><h1>CONDUCTING SUBSTUDY VISIT 10</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA VISIT-15</h1><h1>Conducting substudy visit 10</h1><p>Under development</p></article>
