--- a/public/content/lakana-sop-admin-02-en.html
+++ b/public/content/lakana-sop-admin-02-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA ADMIN-02</h1><h1>WRITING AND MANAGING A STANDARD OPERATING PROCEDURE </h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA ADMIN-02</h1><h1>Writing and Managing a Standard Operating Procedure </h1><p>Under development</p></article>
