--- a/public/content/lakana-sop-lab-02-en.html
+++ b/public/content/lakana-sop-lab-02-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA LAB-02</h1><h1>STORAGE OF RESEARCH SPECIMENS IN BAMAKO LAB</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA LAB-02</h1><h1>Storage of research specimens in Bamako lab</h1><p>Under development</p></article>
