--- a/public/content/lakana-sop-lab-04-en.html
+++ b/public/content/lakana-sop-lab-04-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA LAB-04</h1><h1>S. PNEUMONIAE CULTURE</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA LAB-04</h1><h1>S. pneumoniae culture</h1><p>Under development</p></article>
