--- a/public/content/lakana-sop-lab-05-en.html
+++ b/public/content/lakana-sop-lab-05-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA LAB-05</h1><h1>WASTE MANAGEMENT</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA LAB-05</h1><h1>Waste Management</h1><p>Under development</p></article>
