--- a/public/content/lakana-sop-pharm-01-en.html
+++ b/public/content/lakana-sop-pharm-01-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA PHARM-01</h1><h1>DRUG MANAGEMENT </h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA PHARM-01</h1><h1>Drug management </h1><p>Under development</p></article>
