--- a/public/content/lakana-sop-proc-06-en.html
+++ b/public/content/lakana-sop-proc-06-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA PROC-06</h1><h1>HEEL PRICK  BLOOD COLLECTION FOR CRP+HB</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA PROC-06</h1><h1>Heel prick  blood collection for CRP+Hb</h1><p>Under development</p></article>
