--- a/public/content/lakana-sop-proc-08-en.html
+++ b/public/content/lakana-sop-proc-08-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA PROC-08</h1><h1>URINE COLLECTION</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA PROC-08</h1><h1>Urine collection</h1><p>Under development</p></article>
