--- a/public/content/lakana-sop-proc-09-en.html
+++ b/public/content/lakana-sop-proc-09-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA PROC-09</h1><h1>TRANSPORT THE SAMPLES FROM FIELD TO LAB (MOTORCYCLE MESSENGER)</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA PROC-09</h1><h1>Transport the samples from field to lab (motorcycle messenger)</h1><p>Under development</p></article>
