--- a/public/content/lakana-sop-visit-01-en.html
+++ b/public/content/lakana-sop-visit-01-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA VISIT-01</h1><h1>CONDUCTING THE ENROLMENT VISIT - MAIN STUDY </h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA VISIT-01</h1><h1>Conducting the enrolment visit - main study </h1><p>Under development</p></article>
