--- a/public/content/lakana-sop-visit-02-en.html
+++ b/public/content/lakana-sop-visit-02-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA VISIT-02</h1><h1>CONDUCTING SUBSEQUENTS VISITS - MAIN STUDY </h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA VISIT-02</h1><h1>Conducting subsequents visits - main study </h1><p>Under development</p></article>
