--- a/public/content/lakana-sop-visit-04-en.html
+++ b/public/content/lakana-sop-visit-04-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA VISIT-04</h1><h1>CONDUCTING SUBSTUDY VISIT 1</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA VISIT-04</h1><h1>Conducting substudy visit 1</h1><p>Under development</p></article>
