--- a/public/content/lakana-sop-visit-06-en.html
+++ b/public/content/lakana-sop-visit-06-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA VISIT-06</h1><h1>CONDUCTING SUBSTUDY VISIT 3</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA VISIT-06</h1><h1>Conducting substudy visit 3</h1><p>Under development</p></article>
