--- a/public/content/lakana-sop-visit-07-en.html
+++ b/public/content/lakana-sop-visit-07-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA VISIT-07</h1><h1>CONDUCTING SUBSTUDY VISIT 3B</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA VISIT-07</h1><h1>Conducting substudy visit 3b</h1><p>Under development</p></article>
