--- a/public/content/lakana-sop-visit-09-en.html
+++ b/public/content/lakana-sop-visit-09-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA VISIT-09</h1><h1>CONDUCTING SUBSTUDY VISIT 4B</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA VISIT-09</h1><h1>Conducting substudy visit 4b</h1><p>Under development</p></article>
