--- a/public/content/lakana-sop-visit-13-en.html
+++ b/public/content/lakana-sop-visit-13-en.html
@@ -1,1 +1,1 @@
-<article class='sop'><h1>LAKANA VISIT-13</h1><h1>CONDUCTING SUBSTUDY VISIT 6B</h1><p>Under development</p></article>
+<article class='sop'><h1>LAKANA VISIT-13</h1><h1>Conducting substudy visit 6b</h1><p>Under development</p></article>
