These are our initial examples for SOPs.

--- a/public/content/lakana-sop-admin-01-en.html
+++ b/public/content/lakana-sop-admin-01-en.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="styles.css">
+
 <article class="sop">
     <h1>LAKANA SOP 1</h1>
     <h1>Communication and processes for communication</h1>
@@ -92,7 +94,7 @@
     <h2>Appendices and other related documents</h2>
 
     <table>
-        <tr>
+       
             <thead>
                 <th>Document number</hd>
                 <th>Document content</th>
