--- a/public/content/lakana-sop-admin-02-en.html
+++ b/public/content/lakana-sop-admin-02-en.html
@@ -1,1 +1,61 @@
-<article class='sop'><h1>LAKANA ADMIN-02</h1><h1>Writing and Managing a Standard Operating Procedure </h1><p>Under development</p></article>
+<link rel="stylesheet" href="styles.css">
+<article class='sop'>
+    <h1>LAKANA ADMIN-02</h1>
+    <h1>Writing and Managing a Standard Operating Procedure </h1>
+    
+<p>Version 0.2 (2020-04-27)</p>
+<h2>Purpose / Background</h2>
+<p>This document provides guidance in the preparation of an SOP.</p>
+<h2>Applicability to and responsibilities of various staff members:</h2>
+<p>This SOP is aimed at all personnel who will be involved in SOP writing and review in the context of the LAKANA Trial activities. </p>
+
+<table>
+       
+    <thead>
+        <th>Stadd member</hd>
+        <th>Responsibility</th>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Members of the Project Steering Group (PSG)</td>
+            <td> <p>Choose the processes that need to be standardized and described in SOPs</p> 
+                <p>Appoint SOP authors for each SOP</p>
+                <p>Review the initial draft and consecutive amendments of the SOP</p>
+                <p>Release and formally approve SOP versions</p>
+                </td>
+        </tr>
+        <tr>
+            <td>LAKANA TAU investigators</td>
+            <td> <p>Coordinate SOP production</p> 
+                <p>Make SOP (e-version) available to intended users</p>
+                </td>
+                <tr>
+                    <td>SOP author</td>
+                    <td> <p>Draft initial version of SOP </p> 
+                        <p>Amend SOP if required</p>
+                        </td>
+                        <tr>
+                            <td>LAKANA investigators</td>
+                            <td> <p>Review the initial draft and consecutive amendments of the SOP</p> 
+                                        </td>
+                                        <tr>
+            <td>External monitor</td>
+            <td> <p>Ensure compliance of SOP by all intended users</p> 
+                <p>Ensure the SOP version used is the most recent one approved by PSG</p>
+                <p>Report non-compliance to PI and PSG members</p>
+                </td>
+    </tbody>
+</table>
+<h2>Required materials</h2>
+<p>Not applicable.</p>
+<h2>Definitions and general instructions</h2>
+<h3>Definitions</h3>
+<h4>Standard Operating Procedure (SOP): Standard Operating Procedures (SOPs) are detailed, written instructions to achieve uniformity of the performance of a specific function. Procedures can take the form of a narrative, a flow chart, a process map, computer screen printouts or combination of all or any other suitable form.  </h4>
+<h3>General instructions</h3>
+<h4>The PSG appoints a person that is directly involved in the operation/procedure to describe as responsible for drafting a specific SOP. </h4>
+<h4>The author of the SOP will write the procedures in short, clear and unambiguous sentences and preferably using active voice. </h4>
+<h4>Each SOP will have a unique identifier number (refer to List of SOPs presented in Appendix 1). </h4>
+<h4>All SOPs will be typed using Microsoft Word application software and will have a standard common format (see Appendix 2). The author of the SOP will structure the body content of the SOP under standard subheadings as described in point 5.4.2.</h4>
+<h4>The SOP will depict the sequence of activities logically. Wherever necessary, the author will incorporate some illustrations, drawings, flow charts or exhibits in the SOP, to provide better clarity and understanding.</h4>
+<h4>English language will be used. For operational purposes, if any SOP is required to be translated in French, the same guidelines will apply.</h4>
+<h4>TAU investigators will make LAKANA SOPs available for all intended users through the LAKANA documents application available on: https://documents.lakana.org/.  The application makes offline access possible (see section 5.5).</h4>
