--- a/public/content/lakana-sop-admin-02-en.html
+++ b/public/content/lakana-sop-admin-02-en.html
@@ -5,7 +5,7 @@
     
 <p>Version 0.2 (2020-04-27)</p>
 <h2>Purpose / Background</h2>
-<p>This document provides guidance in the preparation of an SOP.</p>
+<p>This document provides guidance in the preparation of an SOP<sup>1</sup>.</p>
 <h2>Applicability to and responsibilities of various staff members:</h2>
 <p>This SOP is aimed at all personnel who will be involved in SOP writing and review in the context of the LAKANA Trial activities. </p>
 
@@ -58,4 +58,99 @@
 <h4>All SOPs will be typed using Microsoft Word application software and will have a standard common format (see Appendix 2). The author of the SOP will structure the body content of the SOP under standard subheadings as described in point 5.4.2.</h4>
 <h4>The SOP will depict the sequence of activities logically. Wherever necessary, the author will incorporate some illustrations, drawings, flow charts or exhibits in the SOP, to provide better clarity and understanding.</h4>
 <h4>English language will be used. For operational purposes, if any SOP is required to be translated in French, the same guidelines will apply.</h4>
-<h4>TAU investigators will make LAKANA SOPs available for all intended users through the LAKANA documents application available on: https://documents.lakana.org/.  The application makes offline access possible (see section 5.5).</h4>
+<h4>TAU investigators will make LAKANA SOPs available for all intended users through the LAKANA documents application available on: <a href="https://documents.lakana.org/">LAKANA App</a> The application makes offline access possible (see section 5.5).</h4>
+
+<h2>Step-by-step procedures</h2>
+<h3>Initiation and review process of SOP</h3>
+<h4>For a new SOP, the author will prepare the first draft of the document in consultation with other directly concerned personnel.</h4>
+<h4>The author of the SOP will send the draft to all concerned LAKANA investigators for review of its adequacy.</h4>
+<h4>The author of the SOP will review the submitted comments, incorporate the requested edits, if any, in a revised version, and send it to his supervisor for approval.</h4>
+<h4>After getting satisfactory correction and changes, the SOP will be sent for final approval by PSG members.</h4>
+<h3>Numbering and naming system of SOP <em>(refer to List of SOPs presented in Appendix 1).</em></h3>
+<h4>SOPs shall be uniquely enumerated with an alphanumeric designation. </h4>
+<h4>The name of the SOPs will follow the naming convention ‘LAKANA_Trial_SOP_No._Title_vNo._Date.</h4>
+<h5>Version no. will be denoted in two numeric characters. </h5>
+<p>•New draft of SOP will carry version No. ‘0.1’ denoted v0.1 and the subsequent revised versions will be denoted by ‘v0.2’, ‘v0.3’ and so on.</p>
+<p>•Once approved by the PSG, the SOP will carry Version No. ‘1.0’.</p>
+<h5>The ‘Date’ will be written in YYYY-MM-DD format. </h5>
+
+<h3>Formatting of SOP</h3>
+<h4>All SOPs will be typed using Microsoft Word application software.</h4>
+<h4>All SOPs will have a standard common format as per Appendix 2. The type of font for the contents in the SOP will be “Times New Roman”. Orientation of page will be portrait. Landscape orientation will also be used in appendices.</h4>
+<h4>All the points in the SOP will be numbered sequentially. Similarly the sub-paragraphs of each point will also be numbered sequentially, with an incremental number derived from the heading number. The system of numbering will be as follows: First level shall be 1, 2, and 3 …….so on, Second level shall be 1.1, 1.2, 1.3……..so on, this shall continue up to 4th  level and 4th level shall be 1.1.1.1., and after this level sub-numbering can be marked as ‘i’, ‘ii’ and so on. In case where numbering of sub-paragraphs are not necessary and listing is essential, bullets or other suitable identification marks may be used to illustrate the same.</h4>
+<h3>Content of SOP</h3>
+<h4>Content of header</h4>
+<h5>‘LAKANA SOP No.’ ‘Title of SOP’ and ‘Page No.’</h5>
+<p>•	SOP No. will be written as described in point no. 5.2.1. </p>
+<p>•	Page No. will be numbered in Page X of YY format, e.g. first page of SOP of total 05 pages shall be Page 1 of 5. </p>
+<h5>‘Standard Operating Procedures for the LAKANA trial’.</h5>
+<h5>‘SOP No.’: ‘Title’.</h5>
+<h5>‘Version No.’ (‘Date’).</h5>
+<h4>Contents of SOP body</h4>
+<h5>Purpose / Background: as first point; an overview of the intention of preparation of the SOP Standard Operating Procedure will be briefly mentioned under this heading. </h5>
+<h5>Applicability to and responsibilities of various staff members: as second point; this section will describe the personnel that will be responsible for implementation and compliance of the Standard Operating Procedure.</h5>
+<h5>Required materials: as a third point; this section will list and specify, where necessary, equipment, materials needed to accomplish the procedures.   </h5>
+<h5>Definitions and general instructions: as a 4th point; this section will identify any words, phrases, or specialized terms used, and describe the detailed procedure to be followed in simple and clear sentences. </h5>
+<h5>Step-by-step procedures: as a 5th point; this section will include the details of all operations, checks and special precautions to be taken, if any.</h5>
+<h5>Occupational Safety Issues: as a 6th point; this section will indicate operations that could result in personal injury and explaining what will happen if the procedure is not followed or is followed incorrectly.</h5>
+<h5>Quality Assurance / Quality Control: as a 7th point; this section will describe any control steps and provisions for review or oversight prior to acceptance of the product or deliverable. </h5>
+<h5>Appendices and other related documents: as 8th point; this section will list all table, flow charts or any other attachment with the SOP.</h5>
+<h5>Version history, authors and approvals: as 9th point; this section will contain a chronological record of significant changes / modifications in an SOP in brief. It will mention ‘Version Number’, and corresponding ‘Date’, ‘Author of the SOP.  </h5>
+<h3>Viewing a Standard Operating Procedure as a user</h4>
+<h4>All LAKANA SOPs will be accessible through the LAKANA documents App: <a href="https://documents.lakana.org/">LAKANA App</a></h5>
+<h5>Offline access – Configuration procedure for Android: Open web browser (tested for Chrome, Samsung Internet) > Enter the URL and wait until page loads > Add the page to the home screen by clicking on the banner at the bottom of the page > Close the browser > Go to the icon          on your screen to launch the app.</h5>
+<h5>Offline access – Configuration procedure for iOS: Open web browser (Safari) > Enter the URL and wait until page loads > Click the share icon on the top right > Click “Add to home screen.”> Close the browser > Go to the icon on your screen to launch the app. </h5>
+<h2>Occupational Safety Issues</h2>
+<p>None</p>
+<h2>Quality Assurance / Quality Control </h2>
+<h2>Appendices and other related documents </h2>
+<table>
+       
+    <thead>
+        <th>Document number</hd>
+        <th>Document content</th>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Appendix 1</td>
+            <td><a href="https://www.dropbox.com/s/t0kzk26b4391nv5/LAKANA_Trial_List%20of%20SOPs_2020-04-16.xlsx?dl=0">List of SOP - Name and numbering system. </a></td>
+        </tr>
+        <tr>
+            <td>Appendix 2</td>
+            <td><a href="https://www.dropbox.com/s/14edp2mwqerblsf/LAKANA_SOP%20Template.docx?dl=0">SOP Template.</a></td>
+        </tr>
+    </tbody>
+</table>
+
+<h2>Version history, authors and approvals</h2>
+
+<table>
+<thead>
+    <tr>
+        <th>Version (date)</th>
+        <th>Date</th>
+        <th>Edits to the SOP text (author)</th>
+    </tr>
+</thead>
+<tbody>
+    <tr>
+        <td>0.1</td>
+        <td>2020-04-05</td>
+        <td>Original document (Author Laura Adubra).
+            </td>
+    </tr>
+    <tr>
+        <td>0.2</td>
+        <td>2020-04-27</td>
+        <td>Made edits suggested by Per Ashorn and Ulla Ashorn. 
+            Added information on LAKANA documents App for user access to SOPs
+            Added Appendix: List of SOPs approved by PSG on 22-04-2020.
+            </td>
+    </tr>
+</tbody>
+</table>
+</div>
+<p>Footnotes:</p>
+    <p><sup>1</sup>Abbreviations: SOP = standard operating procedure, LAKANA = Large-scale Assessment of the Key health-promoting Activities of two New mass drug administration regimens with Azithromycin, PSG=Project Steering Group, TAU = Tampere University, PI=Principal Investigator.</p>
+
+</article>
