--- a/public/content/lakana-sop-admin-01-en.html
+++ b/public/content/lakana-sop-admin-01-en.html
@@ -3,6 +3,7 @@
 <article class="sop">
     <h1>LAKANA SOP 1</h1>
     <h1>Communication and processes for communication</h1>
+    <p>Version 1.0 (2020-03-29)</p>
 
     <h2>Purpose / Background</h2>
     <p>The purpose of this SOP<sup>1</sup> is to ensure effective communication among LAKANA project stakeholders.</p>
