--- a/public/content/lakana-sop-admin-02-en.html
+++ b/public/content/lakana-sop-admin-02-en.html
@@ -12,7 +12,7 @@
 <table>
        
     <thead>
-        <th>Stadd member</hd>
+        <th>Staff member</hd>
         <th>Responsibility</th>
     </thead>
     <tbody>
@@ -54,8 +54,8 @@
 <h3>General instructions</h3>
 <h4>The PSG appoints a person that is directly involved in the operation/procedure to describe as responsible for drafting a specific SOP. </h4>
 <h4>The author of the SOP will write the procedures in short, clear and unambiguous sentences and preferably using active voice. </h4>
-<h4>Each SOP will have a unique identifier number (refer to List of SOPs presented in Appendix 1). </h4>
-<h4>All SOPs will be typed using Microsoft Word application software and will have a standard common format (see Appendix 2). The author of the SOP will structure the body content of the SOP under standard subheadings as described in point 5.4.2.</h4>
+<h4>Each SOP will have a unique identifier number (refer to List of SOPs presented in <a href="https://www.dropbox.com/s/t0kzk26b4391nv5/LAKANA_Trial_List%20of%20SOPs_2020-04-16.xlsx?dl=0">Appendix 1. </a>). </h4>
+<h4>All SOPs will be typed using Microsoft Word application software and will have a standard common format (see <a href="https://www.dropbox.com/s/14edp2mwqerblsf/LAKANA_SOP%20Template.docx?dl=0">Appendix 2.</a>). The author of the SOP will structure the body content of the SOP under standard subheadings as described in point 5.4.2.</h4>
 <h4>The SOP will depict the sequence of activities logically. Wherever necessary, the author will incorporate some illustrations, drawings, flow charts or exhibits in the SOP, to provide better clarity and understanding.</h4>
 <h4>English language will be used. For operational purposes, if any SOP is required to be translated in French, the same guidelines will apply.</h4>
 <h4>TAU investigators will make LAKANA SOPs available for all intended users through the LAKANA documents application available on: <a href="https://documents.lakana.org/">LAKANA App</a> The application makes offline access possible (see section 5.5).</h4>
@@ -66,7 +66,7 @@
 <h4>The author of the SOP will send the draft to all concerned LAKANA investigators for review of its adequacy.</h4>
 <h4>The author of the SOP will review the submitted comments, incorporate the requested edits, if any, in a revised version, and send it to his supervisor for approval.</h4>
 <h4>After getting satisfactory correction and changes, the SOP will be sent for final approval by PSG members.</h4>
-<h3>Numbering and naming system of SOP <em>(refer to List of SOPs presented in Appendix 1).</em></h3>
+<h3>Numbering and naming system of SOP <em>(refer to List of SOPs presented in <a href="https://www.dropbox.com/s/t0kzk26b4391nv5/LAKANA_Trial_List%20of%20SOPs_2020-04-16.xlsx?dl=0">Appendix 1. </a>).</em></h3>
 <h4>SOPs shall be uniquely enumerated with an alphanumeric designation. </h4>
 <h4>The name of the SOPs will follow the naming convention ‘LAKANA_Trial_SOP_No._Title_vNo._Date.</h4>
 <h5>Version no. will be denoted in two numeric characters. </h5>
@@ -76,7 +76,7 @@
 
 <h3>Formatting of SOP</h3>
 <h4>All SOPs will be typed using Microsoft Word application software.</h4>
-<h4>All SOPs will have a standard common format as per Appendix 2. The type of font for the contents in the SOP will be “Times New Roman”. Orientation of page will be portrait. Landscape orientation will also be used in appendices.</h4>
+<h4>All SOPs will have a standard common format as per <a href="https://www.dropbox.com/s/14edp2mwqerblsf/LAKANA_SOP%20Template.docx?dl=0">Appendix 2.</a>. The type of font for the contents in the SOP will be “Times New Roman”. Orientation of page will be portrait. Landscape orientation will also be used in appendices.</h4>
 <h4>All the points in the SOP will be numbered sequentially. Similarly the sub-paragraphs of each point will also be numbered sequentially, with an incremental number derived from the heading number. The system of numbering will be as follows: First level shall be 1, 2, and 3 …….so on, Second level shall be 1.1, 1.2, 1.3……..so on, this shall continue up to 4th  level and 4th level shall be 1.1.1.1., and after this level sub-numbering can be marked as ‘i’, ‘ii’ and so on. In case where numbering of sub-paragraphs are not necessary and listing is essential, bullets or other suitable identification marks may be used to illustrate the same.</h4>
 <h3>Content of SOP</h3>
 <h4>Content of header</h4>
