Implemented router and fixed history.

--- a/public/index.html
+++ b/public/index.html
@@ -39,11 +39,11 @@
             <placeholder id="menu"></placeholder>
             <hr class="mdc-list-divider">
             <h6 class="mdc-list-group__subheader"><span lang="en">Language</span><span lang="fr">Langue</span></h6>
-            <a class="mdc-list-item" href="/lang/en" id="english-link">
+            <a class="mdc-list-item" href="/#/lang/en" id="english-link">
               <i class="material-icons mdc-list-item__graphic" aria-hidden="true">bookmark</i>
               <span class="mdc-list-item__text"><span lang="en">English</span><span lang="fr">Anglais</span></span>
             </a>
-            <a class="mdc-list-item" href="/lang/fr" id="french-link">
+            <a class="mdc-list-item" href="/#/lang/fr" id="french-link">
               <i class="material-icons mdc-list-item__graphic" aria-hidden="true">bookmark</i>
               <span class="mdc-list-item__text"><span lang="en">French</span><span lang="fr">Français</span></span>
             </a>
