--- a/public/content/lakana-sop-admin-01-en.html
+++ b/public/content/lakana-sop-admin-01-en.html
@@ -1,5 +1,8 @@
 <article class="sop">
+    <embedded-document src="/content/include1.html"></embedded-document>
+   
     <h1>LAKANA SOP 1</h1>
+    
     <h1>Communication and processes for communication</h1>
 
     <h2>Purpose / Background</h2>
